# kiwoom-autotrade

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: plan.md  review.md  save-memory.md
.claude/hooks/: activity-log.sh  doc-tracker.sh  ruff-format.sh  security-scan.sh
.claude/memory/: MEMORY.md  architecture.md  bug-dashboard-balance-zero.md  decisions-pending.md  design-001-system-v1.md  design-002-strategy.md  design-003-risk-management.md  design-004-infra-eks.md  design-005-data-pipeline.md  design-006-telegram.md  design-007-websocket.md  design-008-llm-db-context.md  design-infra-eks.md  design-phase1-risk-management.md  design-phase3-data-pipeline.md  design-review-v1.md  design-strategy-v2.md  design-telegram-bidirectional.md  design-v1-to-v1.1-changes.md  design-v1.1.md  design-v1.md  design-websocket-migration.md  doc-registry.md  feedback_parallel_agents.md  last-session.md  project.md  research-broker-api.md  research-data-sources-phase3.md  research-free-deployment.md  research-market-analysis-2026-03.md  research-rate-limits-and-queues.md  research-web-architecture.md  strategy-momentum.md
.claude/rules/: agent-logging.md  agent-roles.md  airflow.md  doc-lifecycle.md  frontend.md  github-workflow.md  prompting-guide.md  python.md  trading.md
.github/: dependabot.yml
.github/workflows/: security.yml  test.yml
airflow/: .airflowignore  Dockerfile  docker-compose.yml  requirements.txt
airflow/tests/: conftest.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_broker_token_cache.py  003_phase3_data_tables.py  004_stock_universe.py  005_stocks_master.py  006_stock_relations.py  007_monthly_signals.py  008_llm_results.py  009_llm_decisions.py  010_suggestion_telegram_sent_at.py  011_screen_config_seed.py  012_daily_candles.py  013_daily_screening_cache.py  014_slippage_config_seed.py  015_cross_momentum_config_seed.py  016_short_swing_config_seed.py  017_short_swing_candidates_table.py  018_short_swing_positions_table.py  019_short_swing_state_machine_user_scope.py  019_ss_state_user_scope.py  020_short_swing_prev_day_high.py  021_strategy_runtime_table.py
data/: krx_holidays.json
docs/: test-audit-2026-04-20.md
docs/ai-hedge/: AI_HEDGE_FUND_INTEGRATION_HANDOFF.md
docs/backtest-results/: backtest_20260424_064956.json  daily_backtest_20260427_103106.json  daily_backtest_20260427_103117.json  daily_backtest_20260427_113311.json  strategy_comparison_20260427.json  walk_forward_cross_momentum_full_20260427_193805.json  walk_forward_cross_momentum_recompute_20260427_201019.json  walk_forward_pullback_range_20260427_151928.json  walk_forward_rerun_20260427_045847.json
docs/design/: SHORT_SWING_STRATEGY_DESIGN.md  design-009-market-context-integration.md  design-010-llm-decision-integration.md  design-011-daily-candle-caching.md  design-012-pre-screening-cache.md  design-013-multi-regime-strategy.md  design-014-live-order-persist.md  design-015-backtest-engine-integrity.md  design-016-strategy-redesign.md  design-017-risk-microstructure.md  design-018-strategy-rerun.md  design-019-pullback-range-validation.md  design-020-extended-validation.md  design-021-cross-sectional-momentum.md  design-022-cross-momentum-live-adapter.md  design-023-cross-momentum-hardening.md  design-024-strategy-enum-consolidation.md  design-025-multi-strategy-orchestrator.md
docs/kiwoom-rest-api/: 01-auth.md  02-account.md  03-order.md  04-credit-order.md  05-market.md  06-stock-info.md  07-ranking.md  08-chart.md  09-sector.md  10-institution.md  11-elw.md  12-etf.md  13-slb.md  14-short-sell.md  15-theme.md  16-websocket.md  README.md  live-test-results.json
docs/operations/: strategy-redesign-rollout.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/: middleware.ts
scripts/: backfill_daily_candles.py  backfill_screening.py  backfill_stocks_theme.py  cron_backtest.sh  expire_stale_old_submissions.py  korean_holidays.py  live_trader.py  reconcile_cross_momentum_orders.py  reconcile_remaining_stale_orders.py  run_backtest.py  run_cross_momentum_wf.py  run_daily_backtest.py  run_grid_search.py  run_pullback_range_wf.py  run_strategy_rerun.py  screen_symbols.py  start_trading.sh  test_kiwoom_live.py
src/: main.py
src/ai/: config.py  engine.py
src/api/: deps.py
src/backtest/: __init__.py  daily_engine.py  data_fetcher.py  engine.py  generic_daily_engine.py  generic_walk_forward.py  grid_search.py  metrics.py  mr_engine.py  portfolio_engine.py  result.py  slippage.py  strategy.py  walk_forward.py
src/broker/: __init__.py  base.py  constants.py  kiwoom.py  realtime.py  schemas.py  token_store.py
src/config/: active_strategy.py  database.py  logging.py  scheduler.py  settings.py  strategy_loader.py
src/models/: __init__.py  ai.py  base.py  broker.py  daily_candle.py  daily_screening_cache.py  llm_briefing.py  llm_decision.py  market_data.py  news_article.py  order.py  short_swing.py  stock.py  stock_relation.py  stock_universe.py  strategy.py  strategy_config.py  strategy_runtime.py  trade_log.py  trade_review.py  user.py
src/notification/: __init__.py  commands.py  executor.py  handler.py  telegram.py
src/screening/: __init__.py  cache_store.py  engine.py  short_swing_screener.py
src/strategy/: __init__.py  base.py  cross_momentum.py  cross_momentum_universe.py  flow_signal.py  indicators.py  mean_reversion.py  momentum.py  momentum_daily.py  pullback.py  range_trade.py  theme_detector.py
src/trading/: budget_manager.py  cross_momentum_rebalance.py  daily_candle_store.py  drawdown_guard.py  kill_switch.py  live_order_persist.py  llm_auto_approval.py  llm_decision_loader.py  market_context.py  market_regime.py  order_state.py  (+13 more)
tests/: conftest.py  test_korean_holidays.py  test_live_trader.py  test_screen_symbols_universe.py  test_sector_map_coverage.py
(+386 files in other folders)
