[tool.poetry]
name = "kiwoom-autotrade"
version = "0.1.0"
description = "키움증권 REST API 자동매매 시스템"
authors = ["lsh0107"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135"
uvicorn = {extras = ["standard"], version = "^0.41"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.31"
alembic = "^1.14"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.7"
httpx = "^0.28"
websockets = "^16.0"
python-jose = {extras = ["cryptography"], version = "^3.3"}
bcrypt = "^4.2"
apscheduler = "^3.10"
python-telegram-bot = "^22.6"
structlog = "^25.5"
aiolimiter = "^1.1"
cryptography = "^46.0"
anthropic = "^0.42"
openai = "^1.60"
yfinance = "^0.2"
greenlet = "^3.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.0"
ruff = "^0.15"
mypy = "^1.14"
bandit = {extras = ["sarif"], version = "^1.9"}
pre-commit = "^4.0"
httpx = "^0.28"
factory-boy = "^3.3"
aiosqlite = "^0.22"
respx = "^0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff 설정 ──────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert 허용 (테스트)
    "B008",   # Depends() 허용 (FastAPI)
    "A005",   # 모듈 이름 쉐도잉 허용 (time, logging, signal)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest 설정 ─────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

# ── MyPy 설정 ───────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "asyncpg.*"]
ignore_missing_imports = true

# ── Coverage 설정 ─────────────────────────────────
[tool.coverage.run]
source = ["src"]
concurrency = ["greenlet", "thread"]
omit = [
    "src/ai/engine.py",         # AI 트레이딩 엔진 — 미사용 (live_trader가 Strategy Protocol 직접 사용)
    "src/config/scheduler.py",  # APScheduler — 미사용 (cron 사용 중)
    "src/broker/base.py",       # BrokerClient Protocol 정의 — 실행 코드 없음
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

# ── Bandit 설정 ─────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
